--- a/driverrehab/package.json
+++ b/driverrehab/package.json
@@ -6,8 +6,10 @@
     "bootstrap": "^4.4.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-datepicker": "^2.11.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0"
+    "react-hook-form": "^4.6.2",
+    "react-scripts": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
