--- a/driverrehab/package.json
+++ b/driverrehab/package.json
@@ -9,6 +9,7 @@
     "react-datepicker": "^2.11.0",
     "react-dom": "^16.12.0",
     "react-hook-form": "^4.6.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0"
   },
   "scripts": {
