--- a/driverrehab/package.json
+++ b/driverrehab/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.4.0",
+    "emailjs-com": "^2.4.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-datepicker": "^2.11.0",
