--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "bootstrap": "^4.4.0",
     "emailjs-com": "^2.4.1",
+    "jquery": "^3.4.1",
+    "jspdf": "^1.5.3",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-datepicker": "^2.11.0",
