--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.0",
     "emailjs-com": "^2.4.1",
+    "eruda": "^2.2.0",
     "jquery": "^3.4.1",
     "jspdf": "^1.5.3",
     "react": "^16.12.0",
