--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-hook-form": "^4.6.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
+    "react-select": "^2.0.0-beta.7",
     "xlsx": "^0.15.5"
   },
   "scripts": {
